--- a/example_config.json
+++ b/example_config.json
@@ -9,16 +9,15 @@
       "data_augmentation_max_rotation" : 0.2,
       "data_augmentation_max_scaling" : 0.2,
       "data_augmentation_flip_lr": true,
-      "data_augmentation_flip_ud": false,
+      "data_augmentation_flip_ud": true,
       "data_augmentation_color": false,
-      "evaluate_every_epoch" : 10,
-      "input_resized_size": 1e6
+      "evaluate_every_epoch" : 10
   },
   "pretrained_model_name" : "resnet50",
   "prediction_type": "CLASSIFICATION",
-  "train_data" : "data/cbad-masks/simple/train/train_data.csv",
-  "eval_data" : "data/cbad-masks/simple/train/eval_data.csv",
-  "classes_file" : "data/cbad-masks/simple/train/classes.txt",
-  "model_output_dir" : "demo/cbad_simple_model",
+  "train_data" : "demo/pages/train/",
+  "eval_data" : "demo/pages/val_a1",
+  "classes_file" : "demo/pages/classes.txt",
+  "model_output_dir" : "trained_model",
   "gpu" : "0"
 }
